Add online demo with index.html and fullOptJS artifact

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="demo.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <title>Simple-sub demonstration</title>
   </head>
   <body>
@@ -35,7 +35,7 @@ let res = consume codata
       <div id="simple-sub-output"></div>
     </div>
   </div>
-  <script type="text/javascript" src="js/target/scala-2.13/simple-algebraic-subtyping-fastopt.js"></script>
+  <script type="text/javascript" src="bin/simple-algebraic-subtyping-opt.js"></script>
   <br/>
   <p>The code is available <a href="https://github.com/LPTK/simple-algebraic-subtyping">on github</a>.</p>
   <br/>
