--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="index.css">
-    <title>Simple-sub demonstration</title>
+    <title>Funtypes demonstration</title>
   </head>
   <body>
-  <h1>Simple-sub demonstration</h1>
+  <h1>Funtypes demonstration</h1>
   <div id="content">
     <div id="left">
-<textarea id="simple-sub-input">
+<textarea id="funtypes-input">
 let id = fun x -> x
 let twice = fun f -> fun x -> f (f x)
 
@@ -32,12 +32,12 @@ let res = consume codata
     self = recursive_monster x } -->
     </div>
     <div id="right">
-      <div id="simple-sub-output"></div>
+      <div id="funtypes-output"></div>
     </div>
   </div>
-  <script type="text/javascript" src="bin/simple-algebraic-subtyping-opt.js"></script>
+  <script type="text/javascript" src="bin/funtypes-opt.js"></script>
   <br/>
-  <p>The code is available <a href="https://github.com/LPTK/simple-algebraic-subtyping">on github</a>.</p>
+  <p>The code is available <a href="https://github.com/LPTK/funtypes">on github</a>.</p>
   <br/>
   <p>Credit: the CSS style sheet of this page was shamelessly stolen from <a href="https://www.cl.cam.ac.uk/~sd601/mlsub/">the MLsub demo page</a>.</p>
 </html>
