--- a/local_testing.html
+++ b/local_testing.html
@@ -35,7 +35,7 @@ def f x y = add x y
       <div id="mlscript-output"></div>
     </div>
   </div>
-  <script type="text/javascript" src="bin/mlscript-opt.js"></script>
+  <script type="text/javascript" src="js/target/scala-2.13/mlscript-fastopt/main.js"></script>
   <br/>
   <p>The code is available <a href="https://github.com/LPTK/mlscript">on github</a>.</p>
   <br/>
