Fix pattern matching JS code generation and add boolean literal subtypes
Fixes #12

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>MLscript demonstration</title>
   </head>
   <body>
-  <h1>MLscript demonstration</h1>
+  <h1>ML<sub>script</sub> online demonstration</h1>
   <div id="content">
     <div id="left">
 <textarea id="mlscript-input">
@@ -40,7 +40,10 @@ f 1 2
   </div>
   <script type="text/javascript" src="bin/mlscript-opt.js"></script>
   <br/>
-  <p>The code is available <a href="https://github.com/LPTK/mlscript">on github</a>.</p>
+  <p>The code is available <a href="https://github.com/hkust-taco/mlscript">on github</a>.</p>
+  <br/>
+  <p>Note: JavaScript code generation (used to evaluate the result) is not prefect yet and has rough edges.
+    Also, try typing `window.alert "Hello!"` and see what happens!</p>
   <br/>
   <p>Credit: the CSS style sheet of this page was shamelessly stolen from <a href="https://www.cl.cam.ac.uk/~sd601/mlsub/">the MLsub demo page</a>.</p>
 </html>
