--- a/local_testing.html
+++ b/local_testing.html
@@ -8,8 +8,7 @@
   <body>
   <h1>MLscript demonstration</h1>
   <div id="content">
-    <div id="left">
-<textarea id="mlscript-input">
+    <textarea id="mlscript-input" class="panel" spellcheck="false">
 class Left[A]: { value: A }
 def Left value = Left{ value }
 
@@ -64,14 +63,11 @@ test3 2
 test3 false
 test3 "oops"
 test3 {}
-</textarea>
+    </textarea>
 <!-- let rec recursive_monster = fun x ->
   { thing = x;
     self = recursive_monster x } -->
-    </div>
-    <div id="right">
-      <div id="mlscript-output"></div>
-    </div>
+    <div id="mlscript-output" class="panel"></div>
   </div>
   <script type="text/javascript" src="js/target/scala-2.13/mlscript-fastopt/main.js"></script>
   <br/>
