--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <body>
   <h1>ML<sub>script</sub> online demonstration</h1>
   <div id="content">
-    <div id="left">
-<textarea id="mlscript-input">
+    <textarea id="mlscript-input" class="panel" spellcheck="false">
 class Left[A]: { value: A }
 def Left value = Left{ value }
 
@@ -33,10 +32,7 @@ f 1 2
 <!-- let rec recursive_monster = fun x ->
   { thing = x;
     self = recursive_monster x } -->
-    </div>
-    <div id="right">
-      <div id="mlscript-output"></div>
-    </div>
+    <div id="mlscript-output" class="panel"></div>
   </div>
   <script type="text/javascript" src="bin/mlscript-opt.js"></script>
   <br/>
@@ -44,6 +40,4 @@ f 1 2
   <br/>
   <p>Note: JavaScript code generation (used to evaluate the result) is not prefect yet and has rough edges.
     Also, try typing `window.alert "Hello!"` and see what happens!</p>
-  <br/>
-  <p>Credit: the CSS style sheet of this page was shamelessly stolen from <a href="https://www.cl.cam.ac.uk/~sd601/mlsub/">the MLsub demo page</a>.</p>
 </html>
