--- a/local_testing.html
+++ b/local_testing.html
@@ -9,60 +9,32 @@
   <h1>MLscript demonstration</h1>
   <div id="content">
     <textarea id="mlscript-input" class="panel" spellcheck="false">
-class Left[A]: { value: A }
-def Left value = Left{ value }
+class Neg[A](expr: A)
+class Add[E](lhs: E, rhs: E)
+class Lit(n: int)
 
-class Right[A]: { value: A }
-def Right value = Right{ value }
+let add11 = Add(Lit(1), Lit(2))
+let add2negadd11 = Add(Lit(2), Neg(add11))
 
-def testVal = if true then Left 1 else Right 2
-def res = case testVal of
-  { Left -> testVal.value
-  | Right -> 1
-  }
+mixin EvalNothing {
+  fun eval(e: nothing) = e
+}
+mixin EvalAddLit {
+  fun eval(e) =
+    if e is
+      Lit(n) then n
+      Add(l, r) then this.eval(l) + this.eval(r)
+    else super.eval(e)
+}
+mixin EvalNeg {
+  fun eval(e) =
+    if e is Neg(d) then 0 - this.eval(d)
+    else super.eval(e)
+}
 
-def zero = 0
-def bruh = "Bruh"
-def two = add 1 zero
-def lambda = fun x -> x
-def simpleLet = let i = 0 in add i 1
+module TestLang: EvalNothing, EvalAddLit, EvalNeg
 
-def f: (int & 'a) -> (int & 'a) -> 'a
-def f a b = if gt a b then a else b
-
-f 1 2
-
-def test x = case x of
-  { Left -> x.value
-  | Right -> "nope"
-  }
-
-def tmp = test (if true then Left 1 else Right 2)
-
-case tmp of { int -> tmp | string -> 0 }
-
-def test2 x = case x of
-  { int -> x
-  | bool -> x
-  | string -> x
-  }
-test2 1
-test2 true
-test2 "a"
-
-def test3 x = case x of
-  { 1 -> true
-  | true -> true
-  | "a" -> true
-  | _ -> false
-  }
-test3 1
-test3 true
-test3 "a"
-test3 2
-test3 false
-test3 "oops"
-test3 {}
+TestLang.eval
 </textarea>
 <!-- let rec recursive_monster = fun x ->
   { thing = x;
