WIP Update HTML + minor test change

--- a/local_testing.html
+++ b/local_testing.html
@@ -34,14 +34,11 @@ mixin EvalNeg {
 
 module TestLang: EvalNothing, EvalAddLit, EvalNeg
 
-TestLang.eval
+let res = TestLang.eval(add2negadd11)
 </textarea>
-<!-- let rec recursive_monster = fun x ->
-  { thing = x;
-    self = recursive_monster x } -->
     <div id="mlscript-output" class="panel"></div>
   </div>
   <script type="text/javascript" src="js/target/scala-2.13/mlscript-fastopt/main.js"></script>
   <br/>
-  <p>The code is available <a href="https://github.com/LPTK/mlscript">on github</a>.</p>
+  <!-- <p>The code is available TODO.</p> -->
 </html>
