--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ let xs = 1 :: 2 :: 3 :: Nil
 
 show(xs)
 
-show(map of x => x + 1, xs)
+show(map of x => succ(x), xs)
 </textarea>
 <!-- let rec recursive_monster = fun x ->
   { thing = x;
