--- a/local_testing.html
+++ b/local_testing.html
@@ -9,26 +9,30 @@
   <h1>MLscript demonstration</h1>
   <div id="content">
     <textarea id="mlscript-input" class="panel" spellcheck="false">
-class Add[E](lhs: E, rhs: E)
-class Lit(n: Int)
-class Neg[E](expr: E)
+type List[A] = Cons[A] | Nil
 
-let add11 = Add(Lit(1), Lit(2))
-let add2negadd11 = Add(Lit(2), Neg(add11))
-
-mixin EvalAddLit {
-  fun eval(e) =
-    if e is
-      Lit(n) then n
-      Add(l, r) then this.eval(l) + this.eval(r)
+class Cons[out A](head: A, tail: List[A]) {
+  fun map: (A -> 'B) -> List['B]
+  map(f) = Cons of f(head), tail.map(f)
 }
-mixin EvalNeg {
-  fun eval(override Neg(d)) = 0 - this.eval(d)
+module Nil {
+  fun map(f) = Nil
 }
 
-module TestLang extends EvalAddLit, EvalNeg
+fun (::) cons(x, xs) = Cons(x, xs)
 
-let res = TestLang.eval(add2negadd11)
+fun show(xs) =
+  let rec go(xs) = if xs is
+    Cons(h, Nil) then String(h)
+    Cons(h, t)   then join(String(h), ", ", go(t))
+    Nil          then ""
+  join("[", go(xs), "]")
+
+let xs = 1 :: 2 :: 3 :: Nil
+
+show(xs)
+
+show(xs.map of x => succ(x))
 </textarea>
     <div id="mlscript-output" class="panel"></div>
   </div>
@@ -36,68 +40,5 @@ let res = TestLang.eval(add2negadd11)
   <br/>
   <!-- <p>The code is available TODO.</p> -->
   <br/>
-
-  <h3>Tip: additional definitions from the paper – copy and paste to try them out:</h3>
-  <div class="panel">
-class Mul[E](lhs: E, rhs: E)<br/>
-mixin EvalMul {<br/>
-&nbsp;&nbsp;fun eval(override Mul(l, r)) = this.eval(l) * this.eval(r)<br/>
-}<br/>
-mixin EvalNegNeg {<br/>
-&nbsp;&nbsp;fun eval(override Neg(Neg(d))) = this.eval(d)<br/>
-}<br/>
-<br/>
-module TestLang2 extends EvalAddLit, EvalNeg, EvalMul, EvalNegNeg<br/>
-<br/>
-let res2 = TestLang2.eval(add2negadd11)
-  </div>
-<br/>
-  <div class="panel">
-class Some[A](value: A)<br/>
-<br/>
-mixin Foo { fun foo: Int = 1 }<br/>
-mixin Bar { fun foo = Some(super.foo) }<br/>
-module ClsFoo extends Foo, Bar, Bar<br/>
-<br/>
-ClsFoo.foo<br/>
-  </div>
-<br/>
-  <div class="panel">
-class Some[A](value: A)<br/>
-module None<br/>
-<br/>
-mixin ComparePoint {<br/>
-&nbsp;&nbsp;fun compare(lhs, rhs) = (lhs.x == rhs.x) && (lhs.y == rhs.y)<br/>
-}<br/>
-mixin CompareColored {<br/>
-&nbsp;&nbsp;fun compare(lhs, rhs) =<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;super.compare(lhs, rhs) && eq(lhs.color)(rhs.color)<br/>
-}<br/>
-mixin CompareNested {<br/>
-&nbsp;&nbsp;fun compare(lhs, rhs) =<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;super.compare(lhs, rhs) &&<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;if lhs.parent is Some(p)<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;then rhs.parent is Some(q) and this.compare(p, q)<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;else rhs.parent is None<br/>
-}<br/>
-<br/>
-class MyPoint(x: Int, y: Int, color: Str, parent: Some[MyPoint] | None)<br/>
-<br/>
-module CompareMyPoint extends ComparePoint, CompareColored, CompareNested<br/>
-<br/>
-let Red = "red"<br/>
-let p0 = MyPoint(0, 0, Red, None)<br/>
-let p1 = MyPoint(0, 1, Red, None)<br/>
-let p2 = MyPoint(0, 1, Red, None)<br/>
-let p3 = MyPoint(0, 1, Red, Some(p1))<br/>
-let p4 = MyPoint(0, 1, Red, Some(p2))<br/>
-let p5 = MyPoint(0, 1, Red, Some(p3))<br/>
-<br/>
-CompareMyPoint.compare(p0, p1)<br/>
-CompareMyPoint.compare(p1, p2)<br/>
-CompareMyPoint.compare(p3, p4)<br/>
-CompareMyPoint.compare(p3, p5)<br/>
-  </div>
-
 
 </html>
